# Touge.dev

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_track_segment_layout.py  0003_add_repo_count.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  activity.py  car.py  cosmetic.py  event.py  oauth.py  reward.py  run.py  stats.py  track.py  user.py
app/routers/: auth.py  garage.py  inventory.py  profile.py  run.py  settings.py  test_helpers.py
app/schemas/: auth.py  garage.py  profile.py  run.py
app/services/: activity.py  events.py  garage.py  github.py  leetcode.py  lootbox.py  processor.py
app/workers/: celery_app.py  tasks.py
frontend/: app.js  canvas.js  index.html  package-lock.json  package.json  state.js  style.css  tailwind.config.ts  ui.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: NavRail.tsx  (+2 more)
frontend/src/design/: tokens.ts
frontend/src/hooks/: useGarage.ts  useInventory.ts  useProfile.ts  useRun.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/scene/: CarMarker.tsx  MountainScene.tsx  Particles.tsx  Road.tsx  SceneLighting.tsx  Terrain.tsx
frontend/src/store/: index.ts
frontend/src/types/: api.ts
frontend/src/views/: DevView.tsx  GarageView.tsx  InventoryView.tsx  LoginView.tsx  ProfileView.tsx  RunView.tsx  SettingsView.tsx
seeds/: cars.json  cosmetics.json  perks.json  seed.py  tracks.json
tests/: conftest.py  test_events.py  test_lootbox.py  test_processor.py
(+12 files in other folders)
